--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"start": "babel-node src/index.js",
 		"test": "jest",
 		"watch": "nodemon --exec babel-node --watch src/index.js",
-		"watch-test": "jest --watch"
+		"watch-test": "jest --watch",
+    "knex": "knex --knexfile ./src/db/knexfile.js"
 	},
 	"license": "MIT",
 	"dependencies": {
