--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"test": "jest",
 		"watch": "nodemon --exec babel-node --watch src/index.js",
 		"watch-test": "jest --watch",
-    "knex": "knex --knexfile ./src/db/knexfile.js"
+		"knex": "knex --knexfile ./src/db/knexfile.js"
 	},
 	"license": "MIT",
 	"dependencies": {
@@ -27,7 +27,8 @@
 		"babel-eslint": "^10.0.3",
 		"eslint": "^6.8.0",
 		"jest": "^25.1.0",
-		"nodemon": "^2.0.2"
+		"nodemon": "^2.0.2",
+		"supertest": "^6.1.6"
 	},
 	"jest": {
 		"testEnvironment": "node",
