--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 version: "3.6"
 services:
-  db:
+  testdb:
     image: postgres:11
+    # These flags will decrease the query execution time by 20-40% which is great for testing purpose.
+    # We MUST NOT use these configs for development or production since its trade off is data safety
     command: postgres -c fsync=off -c synchronous_commit=off -c full_page_writes=off -c random_page_cost=1.0
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=polycade
-    container_name: "postgres-container"
+      - POSTGRES_DB=test-polycade
+    container_name: "postgres-test-container"
     ports:
       - "54320:5432"
     tmpfs: /var/lib/postgresql/data
