--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
 	"scripts": {
 		"lint": "eslint src/index.js",
 		"start": "babel-node src/index.js",
-		"test": "npm run test-migrate && npm run test-seed && jest",
+		"test": "npm run test-migrate && npm run test-seed && NODE_ENV=test jest",
 		"watch": "nodemon --exec babel-node --watch src/index.js",
 		"watch-test": "jest --watch",
+    "migrate": "knex migrate:latest --knexfile ./src/db/knexfile.js",
+    "seed": "knex seed:run --knexfile ./src/db/knexfile.js",
     "test-migrate": "NODE_ENV=test knex migrate:latest --knexfile ./src/db/knexfile.js",
     "test-seed": "NODE_ENV=test knex seed:run --knexfile ./src/db/knexfile.js",
 		"knex": "knex --knexfile ./src/db/knexfile.js"
